chore: changing eslint ignorePatterns

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,7 +19,7 @@
 			"version": "detect"
 		}
 	},
-	"ignorePatterns": [".eslintrc.json", "vite.config.ts"],
+	"ignorePatterns": [".eslintrc.json", "vite.config.ts", "*.cjs"],
 	"plugins": ["react"],
 	"rules": {
 		"react/react-in-jsx-scope": "off",
